# server/models/Comments.js
@@ -2,10 +2,11 @@ const mongoose = require("mongoose");
 
 const commentSchema = new mongoose.Schema(
   {
-
     author: { type: mongoose.Schema.Types.ObjectId, ref: "User" },
-    post: { type: mongoose.Schema.Types.ObjectId, ref: "Post" },
+    postId: { type: mongoose.Schema.Types.ObjectId, ref: "Post" },
     comment: String,
+    email: String,
+    full_name: String,
   },
   { timestamps: true }
 );
