# server/routes/postRoute.js
@@ -11,7 +11,10 @@ router.put("/edit/:id", authenticateUser,  postController.editPost); // Edit Pos
 router.delete("/delete/:id", authenticateUser, postController.deletePost) // delete manager
 router.put("/restore/:id", mustBeAdmin, postController.restoreDeletedPost) // Restore deleted Post
 router.get("/", postController.viewAllPosts); // view all Posts
-router.get("/:slug", postController.viewSinglePost);
+router.get("/:id", postController.viewSinglePost); // view Single Post
+router.post("/like", authenticateUser, postController.likePost);
+router.post("/bookmark", authenticateUser, postController.bookmark); // Bookmark a post
+router.get("/bookmark/:userId", authenticateUser, postController.userBookmarks); // Get a User's all bookmarks
 
 
 
